--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
       run: go build -v
 
     - name: Test, with coverage
-      run: go test -v -coverprofile=coverage.out -covermode=count
+      run: go test -v -coverprofile=coverage.out
 
     - name: Convert coverage to lcov
       uses: jandelgado/gcov2lcov-action@v1.0.8
